...
    init(refetched: FinalMatch?) {
        guard let refetched else {
            self = .stay(message: Self.notOpenMessage)
            return
        }
        if refetched.decided {
            self = .showFinal(refetched, message: "This match has already finished. Here is the final result.")
        } else {
            self = .stay(message: Self.notOpenMessage)
        }
    }
}

...
